--- a/front/index.html
+++ b/front/index.html
@@ -7,6 +7,12 @@
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Remae</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tenor+Sans&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
