feat: Authentication works!

--- a/front/public/not-mobile.html
+++ b/front/public/not-mobile.html
@@ -31,6 +31,7 @@
   <h1>Bienvenue sur Remae</h1>
   <p>Remae est encore en étape de conception, et n'est actuellement disponible que sur mobile.</p>
   <p>Réduisez votre fenêtre ou accédez au site depuis votre portable ou tablette pour profiter de l'expérience!</p>
+  <a href="/"><p>Je suis sur mobile</p></a>
 </body>
 
 </html>
