--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
   <title>Remae</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
